feat(first draft): initial design

--- a/src/assets/scss/_colors.scss
+++ b/src/assets/scss/_colors.scss
@@ -4,11 +4,11 @@ $color-mid-grey: #999999;
 $color-dark-grey: #666666;
 $color-black: #000000;
 
-$color-red-step1: #ff462d;
-$color-red-step2: #ff422f;
-$color-red-step3: #ff3634;
-$color-red-step4: #ff223c;
-$color-red-step5: #ff0c45;
+$color-red-step1: hsl(7, 100%, 59%);
+$color-red-step2: hsl(5, 100%, 59%);
+$color-red-step3: hsl(1, 100%, 60%);
+$color-red-step4: hsl(353, 100%, 57%);
+$color-red-step5: hsl(346, 100%, 52%);
 
 $color-yellow: #ffbf1f;
 $color-blood-orange: #e54c23;
