--- a/src/assets/scss/_base.scss
+++ b/src/assets/scss/_base.scss
@@ -29,15 +29,10 @@ body {
 }
 
 #app {
-  background: linear-gradient(
-    240deg,
-    $color-red-step1 0.13%,
-    $color-red-step2 26.19%,
-    $color-red-step3 52.6%,
-    $color-red-step4 79.08%,
-    $color-red-step5 100%
-  );
+  background: #fecc00;
   color: $color-text-light;
+  // make it bold
+
   padding: 0 3.125rem;
   min-height: 100%;
   overflow: hidden;
