--- a/src/assets/scss/_slot.scss
+++ b/src/assets/scss/_slot.scss
@@ -9,7 +9,7 @@
   height: auto;
   max-width: $title-width;
   width: 100%;
-  margin: $title-margin-top 0 $title-margin-bottom 0;
+  margin: $title-margin-top 0 3.7rem 0;
   position: relative;
   z-index: $z-index-title; // make sure title on top of sunburst
   color: $color-title-border;
@@ -65,7 +65,7 @@
     margin: 0 auto;
     border-radius: $slot-border-radius;
     @include shadow('large');
-    background: $color-slot-background url(@images/light-blubs.svg);
+    background: #f10109 url(@images/light-blubs.svg);
     position: relative;
     z-index: $z-index-slot; // make sure slot is on top of sunburst
   }
@@ -128,6 +128,19 @@
 }
 
 #draw-button {
+  color: #02102b;
+  background-color: #fffff4;
+  box-shadow:
+    inset 0 -8px 1px rgba(0, 0, 0, 0.3),
+    inset 0 -18px 1px rgba(0, 0, 0, 0.1),
+    // Inner shadow with a light top and dark bottom
+    0.625rem 0.625rem 0 $color-slot-shadow;
+  // color: #FFDF00;
+  // background-color: #F10109;
+  // put thick border
+  font-family: 'Roboto', sans-serif; // This assumes you have imported Roboto Bold with weight 700
+  font-weight: 700; // 700 is equivalent to 'bold'
+  border: 0.5rem solid #02102b;
   width: $draw-button-width;
   max-width: 100%;
   margin: $draw-button-margin-top 0 0;
@@ -142,7 +155,7 @@
       line-height: max((1.75rem * $factor), 1rem);
       padding: 1rem * $factor 0.625rem * $factor;
       border-radius: 0.625rem * $factor;
-      @include shadow('large', $factor);
+      // @include shadow('large', $factor);
     }
   }
 }
