--- a/src/pages/landing.pug
+++ b/src/pages/landing.pug
@@ -12,7 +12,7 @@ include ../mixins/icons
   #lucky-draw
     .title
       //- Pug loader currently does not handle webpack alias so we will use relative path here
-      include ../assets/images/title.svg
+      include ../assets/images/dhl-logo.svg
 
     .slot
       .slot__outer
@@ -23,7 +23,7 @@ include ../mixins/icons
       #sunburst.sunburst
         img(src="~@images/sunburst.svg" alt="sunburst")
 
-    button#draw-button.solid-button Draw
+    button#draw-button.solid-button DRAW
 
   #settings.settings
     #settings-panel.settings__panel
