--- a/src/partials/footer.pug
+++ b/src/partials/footer.pug
@@ -7,5 +7,5 @@
   //-
   //- Github sponsors: https://github.com/sponsors/icelam
   //- Ko-fi: https://ko-fi.com/icelam
-  span © Ice Lam #{new Date().getFullYear()}・
-  a(href="https://github.com/icelam/random-name-picker" target="_blank") Github
+  span © ne3emi #{new Date().getFullYear()}・
+  a(href="https://instagram/ne3emi" target="_blank") Instagram
