--- a/src/pages/landing.pug
+++ b/src/pages/landing.pug
@@ -12,8 +12,11 @@ include ../mixins/icons
   #lucky-draw
     .title
       //- Pug loader currently does not handle webpack alias so we will use relative path here
-      include ../assets/images/dhl-logo.svg
-
+      include ../assets/images/dhlLogo.svg
+      .plane
+        include ../assets/images/plane.svg  
+      .plane-left
+        include ../assets/images/planeLeft.svg  
     .slot
       .slot__outer
         .slot__inner
