--- a/src/assets/scss/_slot.scss
+++ b/src/assets/scss/_slot.scss
@@ -9,10 +9,10 @@
   height: auto;
   max-width: $title-width;
   width: 100%;
-  margin: $title-margin-top 0 3.7rem 0;
+  margin: $title-margin-top 0 5.875rem 0;
   position: relative;
   z-index: $z-index-title; // make sure title on top of sunburst
-  color: $color-title-border;
+  color: #d50029;
   display: inline-block;
 
   @each $media-query, $factor in $scale-factors {
@@ -26,6 +26,28 @@
     width: 100%;
     height: auto;
     display: block;
+  }
+  .plane {
+    display: block; // ensure it doesn't inline with other elements
+    width: 50%; // Adjust size as needed
+    margin: 0 auto; // Center the airplane below the logo
+    position: absolute; // Position it relative to .title
+    top: 50%; // Position right below the logo, adjust as needed
+    left: 140%;
+    transform: translateX(-50%) rotate(15deg); // Center horizontally
+    // filter: drop-shadow(3px 16px 0px #FD8D01);
+    filter: drop-shadow(3px 16px 0px rgba(222, 122, 0, 0.747));
+
+  }
+  .plane-left {
+    display: block; // ensure it doesn't inline with other elements
+    width: 50%; // Adjust size as needed
+    margin: 0 auto; // Center the airplane below the logo
+    position: absolute; // Position it relative to .title
+    top: 50%; // Position right below the logo, adjust as needed
+    left: -40%;
+    transform: translateX(-50%) rotate(-15deg); // Center horizontally
+    filter: drop-shadow(3px 16px 0px rgba(222, 122, 0, 0.747));
   }
 }
 
